Node and npm are the worst things to happen to software development ever

--- a/deploy/roles/deploy-code/tasks/main.yml
+++ b/deploy/roles/deploy-code/tasks/main.yml
@@ -20,7 +20,7 @@
     - update-code
 
 
-- name: "Install dependencies"
+- name: "Install python dependencies"
   pip:
     requirements: "requirements.txt"
     chdir: "{{ checkout_location }}"
@@ -29,6 +29,9 @@
     - restart pokemaps
   tags:
     - update-code
+
+
+- include: "npmsux.yml"
 
 
 - name: "Copy over credentials and locations"
