Tag for running the grunt deploy mess

--- a/deploy/roles/deploy-code/tasks/npmsux.yml
+++ b/deploy/roles/deploy-code/tasks/npmsux.yml
@@ -2,6 +2,8 @@
 - name: "Set the root dir"
   set_fact:
     root_dir: "{{ playbook_dir }}/../"
+  tags:
+    - grunt
 
 
 - name: "Install grunt and grunt-cli globally"
@@ -14,13 +16,15 @@
     - "grunt-cli"
   become: yes
   delegate_to: localhost
-
+  tags:
+    - grunt
 
 - name: "Install npm dependencies"
   npm:
     path: "{{ root_dir }}"
   delegate_to: localhost
-
+  tags:
+    - grunt
 
 - name: "grunt build for assets"
   command:
@@ -28,7 +32,8 @@
   args:
     chdir: "{{ root_dir }}"
   delegate_to: localhost
-
+  tags:
+    - grunt
 
 - name: "tar up node_modules"
   command:
@@ -37,9 +42,12 @@
     chdir: "{{ root_dir }}"
   run_once: true
   delegate_to: localhost
-
+  tags:
+    - grunt
 
 - name: "Put node_modules on the remote host"
   unarchive:
     src: "{{ root_dir }}/node_modules.tgz"
     dest: "{{ checkout_location }}"
+  tags:
+    - grunt
