--- a/deploy/roles/deploy-code/tasks/npmsux.yml
+++ b/deploy/roles/deploy-code/tasks/npmsux.yml
@@ -15,6 +15,7 @@
     - "grunt"
     - "grunt-cli"
   become: yes
+  run_once: true
   delegate_to: localhost
   tags:
     - grunt
@@ -23,6 +24,7 @@
 - name: "Install npm dependencies (if npm is working at the time)"
   npm:
     path: "{{ root_dir }}"
+  run_once: true
   delegate_to: localhost
   tags:
     - grunt
@@ -33,6 +35,7 @@
     "grunt build"
   args:
     chdir: "{{ root_dir }}"
+  run_once: true
   delegate_to: localhost
   tags:
     - grunt
@@ -72,4 +75,5 @@
   with_items:
     - "node_modules.tgz"
     - "static_dist.tgz"
+  run_once: true
   delegate_to: localhost
